# Figma---Webflow

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  apply_fixes.py  llm-instructions.md  parse_report.py  pyproject.toml  repomix-output.xml  repomix.config.json
.claude/: settings.example.json  settings.json
.claude/agents/: client-first-architect.md  pm.md  qa-gatekeeper.md  section-builder.md  workspace-steward.md
.user_bugs-log/: README.md  agentic-audit-decision.md  brian.md  client-first-audit.md  script-invocation-map.md  skill-architecture.md  workflow-audit.md
.user_bugs-log/05-06/: plan1.md
.user_guides/: README.md  for-agents.md  for-designers.md  for-developers.md  setup-mcp-webflow-figma.md
.user_versions/: README.md  REPO_CREATION_RUNBOOK.md  VERSION_HISTORY.md  v0.3.0-agentic-quality-upgrades.md  v0.6.0-cf-v2.2-ground-truth-sync.md  v0.7.0-html-first-compiler-start.md  v0.8.0-component-registry-signature-sync.md  v0.9.0-client-first-baseline-sync.md
agentic/: README.md
agentic/knowledge/: client-first-class-map.json  component-registry.json  (+2 more)
archive/: MIGRATION_LOG.md  README.md
knowledge-base/: client-first-class-map.json  component-registry.json  design-system-contract.json
scripts/: README.md  compile_native_ops_from_html.py  index_css_library.py  match_components.py  normalize_figma_nodes.py  phase2a_reconcile_library.py  phase2b_synthesize_logs.py  render_html_from_blueprint.py  resolve_semantic_ir.py  slice_html_into_chunks.py  validate_html_chunks.py
source-css/: README.md  client-first-v2-2.webflow.css
(+286 files in other folders)
